--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
 					<div class="content">
 						<header>
 							<h2>Owen Bales</h2>
-							<p>Junior GIS Undergraduate at the University of Tennessee, Knoxville.</p>
+							<p>Junior GIS Undergraduate at the 
+								University of Tennessee, Knoxville.</p>
 						</header>
-						<span class="image"><img src="images/me.jpeg" alt="" /></span>
+						<span class="image"><img src="images/Me.jpeg" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
