--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<p>Junior GIS Undergraduate at the 
 								University of Tennessee, Knoxville.</p>
 						</header>
-						<span class="image"><img src="images/Me.jpeg" alt="" /></span>
+						<span class="image"><img src="images/Me.png" alt="" /></span>
 					</div>
 					<a href="#one" class="goto-next scrolly">Next</a>
 				</section>
