--- a/index.html
+++ b/index.html
@@ -65,23 +65,18 @@
 							<div class="row">
 								<div class="col-4 col-12-medium">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>Personal Website</h2>
+										<p>Showcasing current and past GIS coding projects from Owen Bales.</p>
 									</header>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p> Owen Bales focuses on terrain analysis of the natural world to push for sustainable solutions
+										to complex problems. Experienced in using GIS software such as ArcGIS, QGIS, Google Earth Pro, and Pix4D.
+										Currently learning Python, JavaScript, and SQL to further his knowledge in the field of GIS.</p>
+									</p>
 								</div>
 								<div class="col-4 col-12-medium">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<p></p>
 								</div>
 							</div>
 						</div>
